--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.04.2022 08:43:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.04.2022 09:11:33</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -124,7 +124,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka se syrskymi olivami a pestem z medvediho cesneku, zeleninovy kuskus, salatek {L} 139</li><li>Pecena cerstva kambala a platyz se syrskymi olivami a pestem z medvediho cesneku, zeleninovy kuskus, salatek {L} 169</li><li>Burrito s mexickym carnitas {trhane veprove}, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Smazene rizecky z mladeho divocaka, bramborovy salat s cervenou repou a cibulkou, citron {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty. zazvorem, kokosovym mlekem a jogurtem, jasminova ryze 139</li></ol>
+<ol><li>Peceny jihocesky pstruh se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, klicky a zelenymi bylinkami 175</li><li>Thajske massaman kari s krutim masem, bataty, zelenymi fazolkami, kokosovym mlekem a arasidy, jasminova ryze 145</li><li>Pecena bazanti stehna na cervenem vine a zelenine, bavorske bramborove knedlicky, cervene zeli s pomeranci {L} 165</li><li>Zapecene zampiony plnene modrym syrem se salotkami a spenatem, stouchane brambory, salatek 139</li></ol>
 </td>
 </tr>
 </table>
